# diffusion-llms-eval

./: README.md  clients.py  config.py  constants.py  custom_embeddings.py  diffusion-llms-eval-overview.pptx  diffusion-llms.pptx  evaluate_faithfulness.py  evaluate_rag.py  latency_tracker.py  pyproject.toml  test_connections.py  validate_chunks.py  ~$diffusion-llms.pptx
annotated_docs/: _articles_llm-evaluation-framework_annotated.docx  _articles_llm-evaluation-metrics_annotated.docx  _blog_announcing-the-langchain-mongodb-partnership-the-ai-agent-stack-that-runs-on-the-database-you-already-trust_annotated.docx  _blog_arcade-dev-tools-now-in-langsmith-fleet_annotated.docx  _blog_autonomous-context-compression_annotated.docx  _blog_better-harness-a-recipe-for-harness-hill-climbing-with-evals_annotated.docx  _blog_continual-learning-for-ai-agents_annotated.docx  _blog_customers-kensho_annotated.docx
baby_langchain/: _about.md  _articles_agent-observability.md  _articles_ai-observability.md  _articles_langsmith-vs-langfuse.md  _articles_llm-as-a-judge.md  _articles_llm-evaluation-framework.md  _articles_llm-evaluation-metrics.md  _blog_agent-evaluation-readiness-checklist.md  _blog_agent-observability-powers-agent-evaluation.md  _blog_agentic-engineering-redefining-software-engineering.md  _blog_announcing-the-langchain-mongodb-partnership-the-ai-agent-stack-that-runs-on-the-database-you-already-trust.md  _blog_arcade-dev-tools-now-in-langsmith-fleet.md  _blog_autonomous-context-compression.md  _blog_better-harness-a-recipe-for-harness-hill-climbing-with-evals.md  (+3 more)
(+387 files in other folders)
