[project]
name = "rag-eval"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ragas>=0.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "httpx>=0.25.0",
    "python-pptx>=1.0.2",
    "markitdown>=0.1.6",
    "nbformat>=5.10.4",
    "notebook>=7.5.7",
    "jupyter>=1.1.1",
]
